Telegram ajuste env e log

--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-TELEGRAM_USER_BOT=
-TELEGRAM_TOKEN_BOT=
+TELEGRAM_LOG=false
+TELEGRAM_NAME_BOT=
+TELEGRAM_API_BOT=
 TELEGRAM_CHAT_ID=
